fix: adjust spacing and layout to remove last slide overflow issue #45

--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,7 @@
   align-items: center;
   justify-content: start;
   padding: var(--border-size);
+  box-sizing: border-box;
 }
 
 /* A parent container MUST have `overflow-x: hidden`!! */
@@ -40,10 +41,12 @@
   max-width: 100%;
   margin: 0;
   --slide-size: 100%;
+  --slide-spacing: 1rem;
 }
 
 .embla__container {
   display: flex;
+  gap: var(--slide-spacing);
 }
 
 .embla__slide {
@@ -52,7 +55,6 @@
   flex: 0 0 var(--slide-size);
   border-radius: var(--border-radius);
   box-sizing: border-box;
-  margin-right: 1rem;
   overflow: hidden;
   filter: brightness(100%);
   transition: filter 0.5s ease-in-out;
@@ -81,7 +83,6 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 10;
-
 }
 
 .scroll-prev {
@@ -107,6 +108,8 @@
   width: 100%;
   margin-top: 40px;
   gap: 14px;
+  padding-inline: var(--border-size);
+  box-sizing: border-box;
 }
 
 .embla__dots {
@@ -201,5 +204,15 @@
   }
   100% {
     transform: translate3d(100%, 0, 0);
+  }
+}
+
+:host([loop]) {
+  .embla__container {
+    gap: unset;
+  }
+
+  .embla__slide {
+    margin-right: var(--slide-spacing);
   }
 }
